Pull request #1345: fix by review
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit db29ead728d52083c72c8b1d3620769a4e5390ca
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 20 13:33:10 2022 +0300

    AG-16572 improve filtering log tab select

commit c6033c3642892bf1a4d52ae7801d8cf47316c077
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 20 12:34:55 2022 +0300

    AG-16572 add input class

commit efdba6e14fd19f765469ccb4d8a1367bf5a26b51
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Sep 20 12:00:14 2022 +0300

    AG-16572 fix by review

--- a/Extension/src/pages/common/components/ui/Select/select.pcss
+++ b/Extension/src/pages/common/components/ui/Select/select.pcss
@@ -39,7 +39,6 @@
         box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.1);
         margin: 13px 0 0 0;
         background-color: var(--white);
-        scrollbar-color: var(--gray700) white;
         scrollbar-width: thin;
 
         @media (prefers-color-scheme: dark) {
