--- a/Extension/src/pages/options/styles/setting.pcss
+++ b/Extension/src/pages/options/styles/setting.pcss
@@ -42,10 +42,6 @@
             &_group {
                 flex-grow: 1;
                 border-radius: 8px;
-
-                &:focus {
-                    outline: 2px solid var(--outline);
-                }
             }
         }
 
@@ -127,6 +123,11 @@
         & a {
             color: var(--green74);
             text-decoration: underline;
+
+            &:focus-visible {
+                outline: none;
+                box-shadow: inset 0 0 0 1px var(--outline);
+            }
         }
     }
 
